BillReminder 0.3.x
==================

 * po/nl.po: Dutch translation updated by Daniel van Eeden <Daniel.van.Eeden@myname.nl>
 * src/gui/adddialog.py: Added optional selectedDate parameter to be used to pre-populate calendar with passed date object when adding new record. (SF #1906715)
 * src/gui/maindialog.py: Removed unused _get_date method and added method to calendar that allows user to add a new record by double-clicking on a selected date.  (SF #1906715)
 * data/billreminder.desktop.in: Changed version attribute to 0.3.
 * src/lib/scheduler.py: Fixed a bug that would cause recurring bills not to expand beyond the current year, change make by Luiz Armesto <luiz.armesto@gmail.com> (ref: sourceforge #1908445)
 * po/fr.po: French translation added by Robert-André Mauchin <zebob.m@pengzone.org>

BillReminder 0.3.0
==================

2008-03-01  Og Maciel <ogmaciel@gnome.org>

    * This was a massive rewrite of the entire application, and instead
    of listing all files that have been changd, I'll try to highlight
    the most important changes and features instead.
    * GLADE: BillReminder 0.3 was entirely re-written in order to remove
    all glade files and dependencies. The initial idea was to simply
    get rid of the dependency, but it also served as a learning process
    for me (and I believe the other contributors will agree with this
    as well).
    * DBUS: The DBUS layer received a bit more love from Luiz Armesto,
    breaking it down into the proper calls so to separate the 'engine'
    per se from the client.
    * UI: The user interface has also gone a series of changes and
    (hopefully) improvements. It is probably not 100% HIG compliant yet,
    but we'll gladly accept suggestions.
    * Bug management: Towards the last 8 weeks of development we've adopted
    the habit of filing bug reports prior to fixing the issues that we
    encountered during the development cycle.