@@ -1,5 +1,7 @@
+2008-03-09 Og Maciel <ogmaciel@gnome.org>
+
+    * dialogs.py: Added missing parameters to AddDialog call
+
 2008-03-06 Og Maciel <ogmaciel@gnome.org>
 
-    * scheduler.py: Fixed a bug that would cause recurring bills
-    not to expand beyond the current year, change make by Luiz 
-    Armesto <luiz.armesto@gmail.com> (ref: sourceforge #1908445)
+    * scheduler.py: Fixed a bug that would cause recurring bills not to expand beyond the current year, change make by Luiz Armesto <luiz.armesto@gmail.com> (ref: sourceforge #1908445)
